# fox

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  array.h  assert.h  chars.h  config.h  error.c  error.h  main.c  main_test.c  memory.h  operator.c  operator.h  preproc.c  preproc.h  vector.h
src/preprocessor/: macro_dict.c  macro_dict.h  macro_dict_test.h  preproc.c  preproc.h
